force-app/main/default/objects/ProfileStagingEventConfig__mdt/ProfileStagingEventConfig__mdt.object-meta.xml
<CustomObject>
    <description>Stores configuration to build cloud events from profile staging records.</description>
    <label>Profile Staging Event Config</label>
    <pluralLabel>Profile Staging Event Configs</pluralLabel>
</CustomObject>