force-app/main/default/objects/ProfileStagingEventConfig__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To publish Cloud Event</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>