force-app/main/default/objects/ProfileStagingEventConfig__mdt/fields/DataSchema__c.field-meta.xml
<CustomField>
    <fullName>DataSchema__c</fullName>
    <label>DataSchema</label>
    <length>255</length>
    <type>Text</type>
</CustomField>