force-app/main/default/objects/ProfileStagingEventConfig__mdt/fields/PartitionKey__c.field-meta.xml
<CustomField>
    <fullName>PartitionKey__c</fullName>
    <label>PartitionKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>