force-app/main/default/objects/ProfileStagingEventConfig__mdt/fields/PayloadModel__c.field-meta.xml
<CustomField>
    <fullName>PayloadModel__c</fullName>
    <label>PayloadModel</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>