force-app/main/default/objects/ProfileStagingEventConfig__mdt/fields/PublishOldEvent__c.field-meta.xml
<CustomField>
    <fullName>PublishOldEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To publish Cloud Event and as well the old platform event</description>
    <label>Publish Old Event ?</label>
    <type>Checkbox</type>
</CustomField>