force-app/main/default/objects/ProfileStagingEventConfig__mdt/fields/RelatedIdField__c.field-meta.xml
<CustomField>
    <fullName>RelatedIdField__c</fullName>
    <label>RelatedIdField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>