force-app/main/default/objects/ProfileStagingEventConfig__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>