force-app/main/default/objects/ProfileStagingEventConfig__mdt/fields/TriggeredFrom__c.field-meta.xml
<CustomField>
    <fullName>TriggeredFrom__c</fullName>
    <label>TriggeredFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>