force-app/main/default/objects/ProfileStagingEventConfig__mdt/listViews/All_View.listView-meta.xml
<ListView>
    <fullName>All_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>PublishOldEvent__c</columns>
    <columns>TriggeredFrom__c</columns>
    <columns>EventType__c</columns>
    <columns>PayloadModel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All View</label>
    <language>en_US</language>
</ListView>